--- a/ProductServer/ProductServer/ProductServer.csproj
+++ b/ProductServer/ProductServer/ProductServer.csproj
@@ -239,6 +239,11 @@
       <DependentUpon>201803191153064_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ApplicationMigrations\Configuration.cs" />
+    <Compile Include="Migrations\ProductMigrations\201803191157338_Initial.cs" />
+    <Compile Include="Migrations\ProductMigrations\201803191157338_Initial.Designer.cs">
+      <DependentUpon>201803191157338_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\ProductMigrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -332,6 +337,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\ApplicationMigrations\201803191153064_Initial.resx">
       <DependentUpon>201803191153064_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\ProductMigrations\201803191157338_Initial.resx">
+      <DependentUpon>201803191157338_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
